src/objects/MT_MediaBroadcastImportControlData__c.object
<CustomObject>
    <description>Media Broadcast Import Control Data object will have a single record summarizing the total number of records and their value totals for each of the data load by external integrating system</description>
    <fields>
        <fullName>Import_Date_Unique__c</fullName>
        <description>To maintain a single record per day</description>
        <label>Import Date Unique</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MT_ImportDate__c</fullName>
        <label>Import Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MT_RecordCount__c</fullName>
        <label>Record Count</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_SumMB1__c</fullName>
        <label>Sum MB1</label>
        <precision>18</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_SumMB3__c</fullName>
        <label>Sum MB3</label>
        <precision>18</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_SumMN3__c</fullName>
        <label>Sum MN3</label>
        <precision>18</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <label>Media Broadcast Import Control Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MT_ImportDate__c</columns>
        <columns>MT_RecordCount__c</columns>
        <columns>MT_SumMB1__c</columns>
        <columns>MT_SumMB3__c</columns>
        <columns>MT_SumMN3__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Maxim</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>maxim3</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>MT_ImportDate__c</columns>
        <columns>Import_Date_Unique__c</columns>
        <columns>MT_RecordCount__c</columns>
        <columns>MT_SumMB1__c</columns>
        <columns>MT_SumMB3__c</columns>
        <columns>MT_SumMN3__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>maxim3</label>
        <language>de</language>
    </listViews>
    <nameField>
        <displayFormat>DIM-{0000000000}</displayFormat>
        <label>Data Import Thread ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Media Broadcast Import Control Data</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>MT_BroadcastImportControlData_validation</fullName>
        <active>true</active>
        <description>Broadcast Import Control Data validation rules</description>
        <errorConditionFormula>NOT(MT_ImportDate__c =  TODAY())</errorConditionFormula>
        <errorDisplayField>MT_ImportDate__c</errorDisplayField>
        <errorMessage>Importdate is not the current day.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_RecordCount_Validation</fullName>
        <active>true</active>
        <description>Record count should not be empty or less than 0</description>
        <errorConditionFormula>MT_RecordCount__c &lt; 0</errorConditionFormula>
        <errorDisplayField>MT_RecordCount__c</errorDisplayField>
        <errorMessage>Record Count is empty or &lt; 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sum_MB1_Validation</fullName>
        <active>true</active>
        <description>Sum of MB1 should not be empty or less than 0</description>
        <errorConditionFormula>MT_SumMB1__c &lt; 0</errorConditionFormula>
        <errorDisplayField>MT_SumMB1__c</errorDisplayField>
        <errorMessage>Sum of MB1 is empty or &lt; 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sum_MB3_Validation</fullName>
        <active>true</active>
        <description>Sum of MB3 should not be empty or less than 0</description>
        <errorConditionFormula>MT_SumMB3__c &lt; 0</errorConditionFormula>
        <errorDisplayField>MT_SumMB3__c</errorDisplayField>
        <errorMessage>Sum of MB3 is empty or &lt; 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sum_MN3_Validation</fullName>
        <active>true</active>
        <description>Sum of MN3 should not be empty or less than 0</description>
        <errorConditionFormula>MT_SumMN3__c &lt; 0</errorConditionFormula>
        <errorDisplayField>MT_SumMN3__c</errorDisplayField>
        <errorMessage>Sum of MN3 is empty or &lt; 0</errorMessage>
    </validationRules>
</CustomObject>